# exemplo-etl-multiplos-arquivos

./: README.md  etl.py  pipeline.py  projeto.tldr  pyproject.toml
